Fixed unreadable blockquotes

--- a/_sass/isp/_base.scss
+++ b/_sass/isp/_base.scss
@@ -118,7 +118,6 @@ a {
  * Blockquotes
  */
 blockquote {
-  color: $grey-color;
   border-left: 4px solid $grey-color-light;
   padding-left: $spacing-unit / 2;
   @include relative-font-size(1.125);
